<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_color" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yong_hu_ming"
            android:textColor="@color/register_color" />

        <EditText
            android:id="@+id/et_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_ma"
            android:textColor="@color/register_color" />

        <EditText
            android:id="@+id/et_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword" />

    </LinearLayout>

    <RadioGroup 
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
        	android:id="@+id/rb_1"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/wo_shi_xue_sheng"
        	android:layout_weight="1"
        	android:textColor="@color/register_color" />

    	<RadioButton
        	android:id="@+id/rb_2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/wo_shi_jiao_shi"
        	android:layout_weight="1"
        	android:textColor="@color/register_color" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhu_ce" />

</LinearLayout>
