<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/cTitleBar"
        android:orientation="vertical" >
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xing_ming"/>
        <EditText
                android:id = "@+id/ed_name"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xue_yuan"/>
        <EditText
                android:id = "@+id/ed_school"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nian_ji"/>
        <EditText
                android:id = "@+id/ed_grade_start"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhi">
        </TextView>
        <EditText
                android:id = "@+id/ed_grade_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
    </LinearLayout>

    <ListView
            android:id="@+id/student_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cGray"></ListView>
</LinearLayout>